--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,20 @@
-Django==2.1.2
-django-crispy-forms==1.7.2
+certifi==2018.10.15
+chardet==3.0.4
+decorator==4.3.0
+Django==2.1.3
+django-chartit==0.2.9
 django-filter==2.0.0
 djangorestframework==3.8.2
+idna==2.7
+ipython-genutils==0.2.0
+jsonschema==2.6.0
+jupyter-core==4.4.0
 Markdown==3.0.1
-pytz==2018.5
+nbformat==4.4.0
+plotly==3.4.2
+pytz==2018.7
+requests==2.20.1
+retrying==1.3.3
+six==1.11.0
+traitlets==4.3.2
+urllib3==1.24.1
